完成管理员登录逻辑，会员增删查改

--- a/module-data/src/main/resources/application-data.yml
+++ b/module-data/src/main/resources/application-data.yml
@@ -12,3 +12,6 @@ spring:
     show-sql: false
     database-platform: org.hibernate.dialect.SQLServerDialect
 
+  redis:
+    host: 127.0.0.1
+    timeout: 1000
